# Smart-Agriculture

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/api/: __init__.py  main.py
app/api/endpoints/: __init__.py  diagnose.py  taxonomy.py  upload.py
app/core/: __init__.py  config.py  deps.py  ssrf_protection.py  templates.py
app/models/: __init__.py  diagnosis.py  taxonomy.py
app/services/: __init__.py  rag_service.py  storage.py  taxonomy_service.py
app/worker/: __init__.py  celery_app.py  chains.py  diagnosis_tasks.py  tasks.py
data/: taxonomy_standard_v1.json
data/chroma/: chroma.sqlite3
data/knowledge/crops/: tomato.md
data/knowledge/diseases/: early_blight.md  gray_mold.md  late_blight.md  leaf_mold.md  powdery_mildew.md
docs/: PRD.md  deployment_checklist.md  diagnosis_workflow.md  ingest_performance.md  knowledge_rag.md  report_generation.md  storage_usage.md  taxonomy_usage.md
openspec/: AGENTS.md  project.md
openspec/changes/archive/2026-01-26-implement-diagnosis-workflow/: proposal.md
openspec/changes/archive/2026-01-26-implement-knowledge-rag/: tasks.md
openspec/changes/archive/expose-taxonomy-api/: tasks.md
openspec/changes/archive/expose-taxonomy-api/specs/taxonomy/: spec.md
openspec/changes/archive/implement-taxonomy-service/: tasks.md
openspec/changes/archive/implement-taxonomy-service/specs/taxonomy/: spec.md
openspec/changes/archive/init-project-foundation/: proposal.md  tasks.md
openspec/changes/expose-taxonomy-api/: proposal.md
openspec/changes/implement-diagnosis-workflow/: tasks.md
openspec/changes/implement-diagnosis-workflow/specs/diagnosis/: spec.md
openspec/changes/implement-knowledge-rag/: proposal.md
openspec/changes/implement-knowledge-rag/specs/rag/: spec.md
openspec/changes/implement-storage-service/: proposal.md  tasks.md
openspec/changes/implement-storage-service/specs/storage/: spec.md
openspec/changes/implement-taxonomy-service/: proposal.md
openspec/specs/infrastructure/: spec.md
scripts/: doctor.py  ingest_knowledge.py
tests/api/: __init__.py  test_diagnose.py  test_diagnose_smoke.py  test_taxonomy.py  test_upload.py
tests/core/: test_ssrf_protection.py
tests/integration/: test_rag_e2e.py
tests/services/: test_rag_service.py  test_storage.py  test_taxonomy.py
tests/worker/: test_chains.py  test_diagnosis_tasks.py  test_diagnosis_tasks_rag.py
