[project]
name = "smart-agriculture"
version = "0.1.0"
description = "Plant Disease and Pest Diagnosis System using RAG and LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.14",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "chromadb>=0.4.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "minio>=7.2.20",
    "openai>=2.15.0",
    "pypdf>=6.6.0",
    "unstructured>=0.18.27",
    "tiktoken>=0.12.0",
    "langchain-community>=0.4.1",
    "markdown>=3.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "psycopg>=3.1.0",
    "requests>=2.31.0",
    "pytest-cov>=7.0.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
